feature update swagger
