# backend/docs/swagger.json
@@ -51,7 +51,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.LoginFailMessage"
+                            "$ref": "#/definitions/model.UnauthorizedMessage"
                         }
                     }
                 }
@@ -82,6 +82,49 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.PostListModel"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Create single post",
+                "parameters": [
+                    {
+                        "description": "Post Data",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.PostCreateBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.PostCreateResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorMessage"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.UnauthorizedMessage"
                         }
                     }
                 }
@@ -149,17 +192,6 @@
                 }
             }
         },
-        "model.LoginFailMessage": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "model.LoginSuccessMessage": {
             "type": "object",
             "properties": {
@@ -206,6 +238,33 @@
                 }
             }
         },
+        "model.PostCreateBody": {
+            "type": "object",
+            "required": [
+                "body",
+                "plain_body",
+                "title"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "plain_body": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.PostCreateResult": {
+            "type": "object",
+            "properties": {
+                "post_id": {
+                    "type": "string"
+                }
+            }
+        },
         "model.PostListModel": {
             "type": "object",
             "properties": {
@@ -220,6 +279,17 @@
                 },
                 "total_count": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.UnauthorizedMessage": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         }
